2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/viewer.py:
	Move render button to toolbar/menu.
	Patch by: Thibaut Girka <thibaut.girka@gmail.com>
	Fixes #421652
	* pitivi/pixmaps/pitivi-file.png:
	* pitivi/pixmaps/pitivi-sound.png:
	Remove no longer used icons.
	* pitivi/pixmaps/pitivi-advanced.png:
	* pitivi/pixmaps/pitivi-advanced-22.png:
	* pitivi/pixmaps/pitivi-advanced-24.png:
	* pitivi/pixmaps/pitivi-render-22.png:
	* pitivi/pixmaps/pitivi-render-24.png:
	Rename icons.
	New render icon by Andreas Nilsson.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Use default gtk theme icons for files, audio files and video files.
	Fixes #431060

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Don't stop pitivi from starting if we can't find the required locale.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Small typo fix.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/pixmaps/pitivi-advanced.png:
	* pitivi/ui/mainwindow.py:
	New icon for Advanced mode.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timeline.py:
	comments fixups.
	* pitivi/ui/viewer.py:
	Pause the timeline when opening the render dialogbox.
	Grey-out the 'Record' button until the user has chosen a file.
	Remove the 'Choose file to render to' message once the user has chosen
	a file.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	* tests/test_timeline_composition.py:
	Fix more cases when removing sources from the composition.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Only establish if the file is valid or not at the complete end of the
	discovery. This avoids having 'not_media_file' emitted several times for
	one file.
	* pitivi/ui/sourcefactories.py:
	Make the text message for the discoverer error dialog more user-friendly.
